--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,35 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  demo-gifs:
+    needs: release
+    runs-on: ubuntu-latest
+    if: ${{ needs.release.outputs.version != '' }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: rhysd/action-setup-vim@v1
+        with:
+          neovim: true
+          version: stable
+
+      - uses: charmbracelet/vhs-action@v2
+        with:
+          path: demo/showcase.tape
+
+      - uses: charmbracelet/vhs-action@v2
+        with:
+          path: demo/ai-review.tape
+
+      - name: Upload demo assets to release
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          gh release upload "v${{ needs.release.outputs.version }}" \
+            demo/showcase.gif demo/showcase.mp4 \
+            demo/ai-review.gif demo/ai-review.mp4 \
+            --clobber
+
   # Uncomment when ready to publish to LuaRocks:
   #
   # luarocks:
